fixed mobile squished on projects margin

--- a/src/index.css
+++ b/src/index.css
@@ -559,7 +559,13 @@ input, label, textarea {
 }
 
 @media screen and (max-width: 520px) {
-  
+.projects-view {
+  margin: .25rem;
+}
+
+.project-links {
+  margin: 0;
+}
 .menu-about,
 .menu-projects,
 .menu-more,
